@@ -1,3 +1,5 @@
+* Enhance Selector#match to support a "group" (comma-separated) selector. [#318 state:resolved] [Andrew Dupont, jddalton, wiktor]
+
 * Make String#stripTags work properly with tags that contain closing brackets in their attributes. [jddalton, kangax]
 
 * Stop Enumerable#grep, Array#grep, and String#gsub from freezing when passed an empty string as a pattern. [jddalton, kangax]
